# ctagent

./: .gitignore  CLAUDE.md  README.md  WORKSPACE_GUIDE.md  ctagent.code-workspace  pyproject.toml
checkpoints/: train_test_split.json
dataset/: __init__.py  ct_slice_exporter.py  degradation_builder.py  dicom_reader.py  dicom_scanner.py  manifest.py  toy.py
docs/: MAR_SynCode_and_degradation_methods.md  codebase_overview_zh.md  cq500_api_eval_flow.md  cq500_api_eval_flow_zh.md  dataset_construction.md  degradation_models.md  degradation_models_cn.md  degradation_synthesis_review.md  deploy_qwen_local.md  mar_degradation_pipeline.md  project_overview.md  prompt_metal_artifact_synthesis.md
downstream/: __init__.py  mock_diagnosis.py
eval/: __init__.py  bhx_loader.py  cq500_api_eval.py  cq500_iqa_restore_eval.py  cq500_labels.py  cq500_manifest.py  metrics.py  slice_labels.py  slice_level_eval.py
executor/: __init__.py  trace.py
exploration/: __init__.py
judge/: __init__.py  base.py  safety_judge.py
llm/: __init__.py  api_client.py  diagnosis_caller.py  guided_caller.py  planner_caller.py  prompt_builder.py  response_parser.py
memory/: __init__.py  experience.py  store.py
pipeline/: __init__.py  agent_loop.py  api_guided_planner.py  replan.py  single_pass.py  types.py
scripts/: _check_bh_scatter_trunc.py  build_clean_dataset.py  build_ct_artifact_dataset.py  build_degraded_dataset.py  build_mar_dataset.py  build_slice_labels.py  build_sop_index.py  eval_ct_artifact_restoration.py  evaluate.py  run_closed_loop_demo.py  run_cq500_api_eval.py  (+12 more)
(+142 files in other folders)
